After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772550 - urisourcebin: Fix minor typo and some FIXME list
urisourcebin: Fix minor typo and some FIXME list
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Mac OS
: Normal minor
: 1.11.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-07 07:32 UTC by Changbok
Modified: 2016-11-02 00:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
update fix minor typo patch (1.74 KB, application/mbox)
2016-10-07 07:32 UTC, Changbok
  Details
update Fix some FIXME list patch (2.47 KB, application/mbox)
2016-10-07 07:34 UTC, Changbok
  Details
update fix minor typo patch (1.74 KB, patch)
2016-10-07 07:38 UTC, Changbok
none Details | Review
update fix some FIXME list patch (2.47 KB, patch)
2016-10-07 07:39 UTC, Changbok
needs-work Details | Review
change summary line about 'fix some FIXME...'path (2.53 KB, patch)
2016-10-12 06:04 UTC, Changbok
none Details | Review

Description Changbok 2016-10-07 07:32:28 UTC
Created attachment 337130 [details]
update fix minor typo patch

I found some minor typo and fixed them.
So I will fix some FIXME list.
Comment 1 Changbok 2016-10-07 07:34:05 UTC
Created attachment 337132 [details]
update Fix some FIXME list patch

update Fix some FIXME list patch
- demuxer property check
- set adaptive demuxer queue's buffering property via urisrc use_buffering value
Comment 2 Changbok 2016-10-07 07:38:12 UTC
Created attachment 337133 [details] [review]
update fix minor typo patch
Comment 3 Changbok 2016-10-07 07:39:18 UTC
Created attachment 337134 [details] [review]
update fix some FIXME list patch
Comment 4 Tim-Philipp Müller 2016-10-11 10:53:12 UTC
Comment on attachment 337134 [details] [review]
update fix some FIXME list patch

>Subject: [PATCH] urisourcebin: Fix some FIXME list
>
>Fix FIXME list
>- demuxer property check
>- set adaptive demuxer queue's buffering property
>  via urisrc use_buffering value

Please try to come up with a better summary line than "Fix some FIXMEs" :)

Try to find something that makes it clear what the change is about and achieves. (If it's multiple things maybe they should be done separately, but these look related, so it's fine.) It should be possible to get an idea what the change was about just from the summary line.
Comment 5 Changbok 2016-10-12 06:04:26 UTC
Created attachment 337491 [details] [review]
change summary line about 'fix some FIXME...'path
Comment 6 Changbok 2016-10-12 06:06:58 UTC
(In reply to Tim-Philipp Müller from comment #4)
> Comment on attachment 337134 [details] [review] [review]
> update fix some FIXME list patch
> 
> >Subject: [PATCH] urisourcebin: Fix some FIXME list
> >
> >Fix FIXME list
> >- demuxer property check
> >- set adaptive demuxer queue's buffering property
> >  via urisrc use_buffering value
> 
> Please try to come up with a better summary line than "Fix some FIXMEs" :)
> 
> Try to find something that makes it clear what the change is about and
> achieves. (If it's multiple things maybe they should be done separately, but
> these look related, so it's fine.) It should be possible to get an idea what
> the change was about just from the summary line.

Thank you for your comment.
I changed summary line and base about "Fix some FIXME..." patch.
Comment 7 Changbok 2016-10-29 05:18:03 UTC
Are there any additional comments??
Comment 8 Jan Schmidt 2016-10-29 08:52:40 UTC
Thanks! Theres' one small typo in the commit message (connection-spped instead of connection-speed), but we can fix that when pushing. We're in hard-freeze for 1.10 at the moment though.
Comment 9 Jan Schmidt 2016-11-02 00:48:25 UTC
thanks! Pushed the 2nd patch. The first was already changed via bug #772445